# coreclr

./: CMakeLists.txt  build.cmd  build.proj  clrdefinitions.cmake  gcstressenv.cmd  out
Documentation/design-docs/: dllmap.md  single-file-staging.md  single-file.md  singlefile.md
eng/: Version.targets
src/System.Private.CoreLib/: System.Private.CoreLib.csproj
src/binder/: applicationcontext.cpp  assemblybinder.cpp  coreclrbindercommon.cpp
src/gc/: gc.cpp  gcpriv.h
src/gcdump/: gcdumpnonx86.cpp
src/gcinfo/: gcinfodumper.cpp  gcinfoencoder.cpp
src/inc/: MSCOREE.IDL  bundle.h  cor.h  corbundle.h  coredistools.h  corhost.h  dacprivate.h  eetwain.h  eexcp.h  gcdecoder.cpp  gcdump.h  gcinfo.h  gcinfodecoder.h  gcinfodumper.h  gcinfoencoder.h  gcinfoencoderr.h  gcinfotypes.h  gctable.h  palclr_win.h  util.h  utilcode.h  winwrap.h
src/jit/: codegencommon.cpp  codegenlegacy.cpp  codegenxarch.cpp  gcencode.cpp  jitgcinfo.h  lclvars.cpp  vartype.h
src/md/: CMakeLists.txt
src/pal/: CMakeLists.txt
src/tools/: CMakeLists.txt
src/tools/Bundle/: CMakeLists.txt  bundle.cpp
src/utilcode/: util.cpp
src/vm/: CMakeLists.txt  appdomain.cpp  appdomain.hpp  assemblynative.cpp  assemblyspec.cpp  assemblyspec.hpp  ceemain.cpp  ceemain.h  codeman.cpp  codeman.h  compile.cpp  comtoclrcall.cpp  corbundle.cpp  coreassemblyspec.cpp  corhost.cpp  debughelp.cpp  disassembler.cpp  disassembler.h  dllimport.cpp  dllimport.h  ecalllist.h  eeconfig.cpp  eeconfig.h  eedbginterfaceimpl.cpp  frames.h  (+28 more)
tests/: runtest.cmd  setup-runtime-dependencies.cmd  setup-runtime-dependencies.sh
(+227 files in other folders)
